@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.7.11) unstable; urgency=low
   * ajp-client: fix disappearing event for duplex socket
   * header-forward: don't forward Accept-Encoding if transformation is
     enabled
+  * widget-http, inline-widget: check Content-Encoding before processing
   * file-handler: send "Vary: Accept-Encoding" for compressed response
 
  --
